--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,95 @@
-/* add css styles here (optional) */
+.root {
+  margin: 0 auto;
+  max-width: 1280px;
+}
 
-.test {
-  display: inline-block;
-  margin: 2em auto;
-  border: 2px solid #000;
-  font-size: 2em;
+.output {
+  position: relative;
+}
+
+.pigBtn {
+  overflow: hidden;
+  left: 0;
+  position: absolute;
+  top: 0;
+  outline-style: solid;
+  will-change: transform, width, height, outline-color;
+  padding: 0;
+  margin: 0;
+  border: none;
+  padding: 0;
+  text-align: left;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  cursor: pointer;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
+}
+
+.pigBtn:hover .caption,
+.pigBtn:focus .caption {
+  transform: none;
+}
+
+.pigImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.pigFull {
+  opacity: 0;
+  /* object-fit: contain; */
+  transition: opacity 300ms linear;
+  will-change: opacity;
+}
+
+.pigThumbnail {
+  -webkit-filter: blur(15px);
+  filter: blur(15px);
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transition: opacity 300ms linear, visibility 300ms linear;
+  will-change: opacity, visibility;
+}
+
+.pigThumbnailLoaded {
+  opacity: 0;
+  visibility: hidden;
+  /* just in case it might help performance */
+  filter: none;
+}
+
+.pigFullLoaded {
+  opacity: 1;
+}
+
+.caption {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  pointer-events: none;
+  width: 100%;
+  padding: 8px;
+  transform: translateY(100%);
+  transition: transform 200ms ease;
+  will-change: transform;
+}
+
+.caption::after {
+  content: '';
+  background-image: linear-gradient(transparent,rgba(0,0,0,.105),rgba(0,0,0,.4));
+  top: 0;
+  left: 0;
+  bottom: -10px;
+  right: 0;
+  position: absolute;
+  z-index: -1;
 }
