--- a/src/styles.css
+++ b/src/styles.css
@@ -13,10 +13,11 @@
   position: absolute;
   top: 0;
   outline-style: solid;
+  outline: 0;
   will-change: transform, width, height, outline-color;
   padding: 0;
   margin: 0;
-  border: none;
+  border: 0;
   padding: 0;
   text-align: left;
   background: transparent;
