--- a/example/src/base.css
+++ b/example/src/base.css
@@ -18,10 +18,15 @@ body {
   background-color: #eceff7;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  color: #6e6e6e;
+  color: #333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-variant-ligatures: common-ligatures;
   user-select: none;
   line-height: 1.2;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
 }
