--- a/example/src/base.css
+++ b/example/src/base.css
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  background-color: #eceff7;
+  background-color: #f8faff;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   color: #333;
