--- a/src/styles.css
+++ b/src/styles.css
@@ -72,18 +72,16 @@
   opacity: 1;
 }
 
-/* .caption {
+.caption {
   position: absolute;
   bottom: 0;
-  color: white;
+  left: 0;
+  color: #fff;
   pointer-events: none;
   width: 100%;
   padding: 8px;
-  transform: translateY(100%);
-  transition: transform 200ms ease;
-  will-change: transform;
 }
-
+/* 
 .caption::after {
   content: '';
   background-image: linear-gradient(transparent,rgba(0,0,0,.105),rgba(0,0,0,.4));
@@ -93,8 +91,8 @@
   right: 0;
   position: absolute;
   z-index: -1;
-}
- */
+} */
+
 
 .headerPositioner {
   width: 100%;
@@ -109,11 +107,9 @@
   line-height: 1.5;
   display: flex;
   align-items: baseline;
-  /* justify-content: space-between; */
 }
 
 .description {
-  /* align-self: flex-end; */
   font-size: 15px;
   margin-right: 1rem;
   flex: 1;
