--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,7 @@
   opacity: 1;
 }
 
-.caption {
+/* .caption {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -80,7 +80,7 @@
   pointer-events: none;
   width: 100%;
   padding: 8px;
-}
+} */
 /* 
 .caption::after {
   content: '';
