--- a/example/src/base.css
+++ b/example/src/base.css
@@ -15,18 +15,38 @@ html {
 }
 
 body {
-  background-color: #f8faff;
+  background-color: hsla(211, 50%, 98%);
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-  color: #333;
+  color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-variant-ligatures: common-ligatures;
   user-select: none;
-  line-height: 1.2;
+  /* line-height: 1.2; */
 }
 
-.container {
-  max-width: 1100px;
+h1 {
+  font-size: 1rem;
+  max-width: 20rem;
+  margin-bottom: 3rem;
+}
+
+@media (min-width: 320px) {
+  h1 {
+    font-size: calc(30px + 6 * ((100vw - 320px) / 680));
+  }
+}
+@media (min-width: 1000px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+}
+
+.main {
+  max-width: 1280px;
   margin: 0 auto;
+  padding: 2.5% 1rem;
+  position: relative;
 }
