--- a/src/components/GroupHeader/styles.css
+++ b/src/components/GroupHeader/styles.css
@@ -13,7 +13,7 @@
   align-items: baseline;
 }
 
-.description {
+.location {
   font-size: 15px;
   margin-right: 1rem;
   flex: 1;
@@ -32,7 +32,7 @@
     font-size: 32px;
   }
 
-  .description {
+  .location {
     font-size: 16px;
   }
 }
@@ -46,7 +46,7 @@
     flex: inherit;
   }
 
-  .description {
+  .location {
     flex: inherit;
   }
 }
