--- a/src/components/Tile/styles.css
+++ b/src/components/Tile/styles.css
@@ -68,7 +68,7 @@
   width: 100%;
   padding: 8px;
 } */
-/* 
+/*
 .caption::after {
   content: '';
   background-image: linear-gradient(transparent,rgba(0,0,0,.105),rgba(0,0,0,.4));
@@ -79,3 +79,26 @@
   position: absolute;
   z-index: -1;
 } */
+
+.pigBtn:hover .checkbox {
+  opacity: 0.5;
+  transition: all 200ms linear;
+}
+
+.pigBtn:hover .checkbox:checked {
+  opacity: 1;
+}
+
+.checkbox {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 0;
+}
+
+.checkbox:checked {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  opacity: 1;
+}
